force-app/main/default/objects/Dhakar_Setting__c/Dhakar_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Dhakar Setting</label>
</CustomObject>