force-app/main/default/objects/Dhakar_Setting__c/fields/Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Api_Name__c</fullName>
    <label>Field Api Name</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>