force-app/main/default/objects/Dhakar_Setting__c/fields/is_Active__c.field-meta.xml
<CustomField>
    <fullName>is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this help to control the trigger running in loop. it is updated true when trigger run first time so that trigger won&apos;t run second time.</description>
    <label>is Active</label>
    <type>Checkbox</type>
</CustomField>