force-app/main/default/objects/Dhakar_Setting__c/fields/Updated_Field_Names__c.field-meta.xml
<CustomField>
    <fullName>Updated_Field_Names__c</fullName>
    <label>Updated Field Names</label>
    <length>200</length>
    <type>Text</type>
</CustomField>